# AdventOfCode

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  template.cpp
2015/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  CMakeLists.txt
2016/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  CMakeLists.txt
2017/: 01.cpp  02.cpp  CMakeLists.txt
2018/: 01.cpp  02.cpp  CMakeLists.txt
2019/: 01.cpp  02.cpp  CMakeLists.txt
2020/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  CMakeLists.txt
2021/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  CMakeLists.txt
2022/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  18.cpp  20.cpp  21.cpp  22.cpp  CMakeLists.txt
2023/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  CMakeLists.txt
2024/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  CMakeLists.txt
include/: aoc.h  aocdatafile.h  aocfolders.h.in  aocmap.h  aocmd5.h  hextoint.h  kgv_ggt.h  manhattan.h  matrix.h  mazerunner.h  position.h  stringreplace.h  stringtovector.h
