# 2021 

# It's not compiling
#add_executable(2021.22 2021/22.cpp)
#target_link_libraries(2021.22 PRIVATE Catch2::Catch2WithMain)
#add_test ( 2021.22 ${CMAKE_BINARY_DIR}/2021.22 )

add_executable(2021.21 2021/21.cpp)
target_link_libraries(2021.21 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.21 ${CMAKE_BINARY_DIR}/2021.21 )

add_executable(2021.20 2021/20.cpp)
target_link_libraries(2021.20 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.20 ${CMAKE_BINARY_DIR}/2021.20 )

add_executable(2021.19 2021/19.cpp)
target_link_libraries(2021.19 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.19 ${CMAKE_BINARY_DIR}/2021.19 )

add_executable(2021.18 2021/18.cpp)
target_link_libraries(2021.18 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.18 ${CMAKE_BINARY_DIR}/2021.18 )

add_executable(2021.17 2021/17.cpp)
target_link_libraries(2021.17 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.17 ${CMAKE_BINARY_DIR}/2021.17 )

add_executable(2021.16 2021/16.cpp)
target_link_libraries(2021.16 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.16 ${CMAKE_BINARY_DIR}/2021.16 )

add_executable(2021.15 2021/15.cpp)
target_link_libraries(2021.15 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.15 ${CMAKE_BINARY_DIR}/2021.15 )

add_executable(2021.14 2021/14.cpp)
target_link_libraries(2021.14 PRIVATE Catch2::Catch2WithMain)
add_test ( 2021.14 ${CMAKE_BINARY_DIR}/2021.14 )


add_executable(2021.13 2021/13.cpp)
target_link_libraries ( 2021.13 PRIVATE Catch2::Catch2WithMain )
add_test ( 2021.13 ${CMAKE_BINARY_DIR}/2021.13 )

add_executable(2021.12 2021/12.cpp)
target_link_libraries ( 2021.12 PRIVATE Catch2::Catch2WithMain )
add_test ( 2021.12 ${CMAKE_BINARY_DIR}/2021.12 )

add_executable(2021.11 2021/11.cpp)
target_link_libraries ( 2021.11 PRIVATE Catch2::Catch2WithMain )
add_test ( 2021.11 ${CMAKE_BINARY_DIR}/2021.11 )

add_executable(2021.10 2021/10.cpp)
target_link_libraries ( 2021.10 PRIVATE Catch2::Catch2WithMain )
add_test ( 2021.10 ${CMAKE_BINARY_DIR}/2021.10 )

add_executable(2021.09 2021/09.cpp)
add_executable(2021.08 2021/08.cpp)
add_executable(2021.07 2021/07.cpp)
add_executable(2021.06 2021/06.cpp)
add_executable(2021.05 2021/05.cpp)
add_executable(2021.04 2021/04.cpp)
add_executable(2021.03 2021/03.cpp)
add_executable(2021.02 2021/02.cpp)
add_executable(2021.01 2021/01.cpp)
