# 2022 

add_executable(2022.22 2022/22.cpp)
target_link_libraries ( 2022.22 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.22 ${CMAKE_BINARY_DIR}/2022.22 )

add_executable(2022.21 2022/21.cpp)
target_link_libraries ( 2022.21 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.21 ${CMAKE_BINARY_DIR}/2022.21 )

add_executable(2022.20 2022/20.cpp)
target_link_libraries ( 2022.20 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.20 ${CMAKE_BINARY_DIR}/2022.20 )

add_executable(2022.18 2022/18.cpp)
target_link_libraries ( 2022.18 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.18 ${CMAKE_BINARY_DIR}/2022.18 )

add_executable(2022.15 2022/15.cpp)
target_link_libraries ( 2022.15 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.15 ${CMAKE_BINARY_DIR}/2022.15 )

add_executable(2022.12 2022/12.cpp)
target_link_libraries ( 2022.12 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.12 ${CMAKE_BINARY_DIR}/2022.12 )

add_executable(2022.11 2022/11.cpp)
target_link_libraries ( 2022.11 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.11 ${CMAKE_BINARY_DIR}/2022.11 )

add_executable(2022.10 2022/10.cpp)
target_link_libraries ( 2022.10 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.10 ${CMAKE_BINARY_DIR}/2022.10 )

add_executable(2022.09 2022/09.cpp)
target_link_libraries ( 2022.09 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.09 ${CMAKE_BINARY_DIR}/2022.09 )

add_executable(2022.08 2022/08.cpp)
target_link_libraries ( 2022.08 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.08 ${CMAKE_BINARY_DIR}/2022.08 )

add_executable(2022.07 2022/07.cpp)
target_link_libraries ( 2022.07 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.07 ${CMAKE_BINARY_DIR}/2022.07 )

add_executable(2022.06 2022/06.cpp)
target_link_libraries ( 2022.06 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.06 ${CMAKE_BINARY_DIR}/2022.06 )

add_executable(2022.05 2022/05.cpp)
target_link_libraries ( 2022.05 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.05 ${CMAKE_BINARY_DIR}/2022.05 )

add_executable(2022.04 2022/04.cpp)
target_link_libraries ( 2022.04 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.04 ${CMAKE_BINARY_DIR}/2022.04 )

add_executable(2022.03 2022/03.cpp)
target_link_libraries ( 2022.03 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.03 ${CMAKE_BINARY_DIR}/2022.03 )

add_executable(2022.02 2022/02.cpp)
target_link_libraries ( 2022.02 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.02 ${CMAKE_BINARY_DIR}/2022.02 )

add_executable(2022.01 2022/01.cpp)
target_link_libraries ( 2022.01 PRIVATE Catch2::Catch2WithMain )
add_test ( 2022.01 ${CMAKE_BINARY_DIR}/2022.01 )

